<resources>
    <string name="app_name">AbruzzoTourism</string>
    <string name="title_activity_dettagli_attivita">DettagliAttivitaActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_turista">Login Turista</string>
    <string name="action_login_attivita">Login Attività</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="nome_cognome_signin">Nome e Cognome</string>
    <string name="data_nascita_signin">Data Di Nascita</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nome_attivita_signin">Nome Attività</string>
    <string name="costo_attivita_signin">Costo Per Persona</string>
    <string name="numMaxPersone_attivita_signin">Numero massimo di persone partecipanti</string>
    <string name="descrizione_attivita_signin">Descrizione Attività</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
